<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExamenPrimeraEv2014</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="contrasena">Contraseña</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="horarios">Horarios</string>
    <string name="alumnos">Alumnos</string>
    <string name="asc">Ordenar Ascendente</string>
    <string name="desc">Ordenar Descendente</string>
    <string name="guardar">Guardar</string>
    <string name="salir">Salir</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>

</resources>
